exports[`test has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "x5wOEbEa8gQtKtfteSDHkkIaW30kZmI9I8EQLk8-DmxL9GteEa9hvIAi8Zhxo22FPDFErxIpp48Ckgp9_ZsIEA",
}
`;

exports[`test has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "831teGtcqKacto5LDMLVURpCHxUN9Vvx2IN0-b05Q5gU3Md1wiuRDM91tP5Q0AyYTr1RTnkoYwmMcNH7wke7oA",
}
`;

exports[`test has correct payload in JWT for an attestation 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "claim": Object {
      "email": "bingbangbung@email.com",
    },
    "exp": 1485321134996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "sub": "0x112233",
  },
  "signature": "-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
}
`;
